# learn-ffmpeg

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
CMake/: FindFFMPEG.cmake  FindSTB.cmake
src/: audio_frame_resample.cpp  audio_frame_resample.h  ffmpeg_decode.cpp  ffmpeg_decode.h  ffmpeg_decoder.cpp  ffmpeg_decoder.h  main.cpp  sdl_player.cpp  sdl_player.h  video_frame_convert.cpp  video_frame_convert.h
